syntax = "proto3";

package sf.solana.type.v1;

option go_package = "github.com/streamingfast/solaccounts/pb/sf/solana/type/v1;pbsol";
import "google/protobuf/timestamp.proto";

message AccountBlock {
  uint64 slot = 1;
  string hash = 2;
  uint64 parent_slot = 3;
  string parent_hash = 4;
  uint64 lib = 5;
  google.protobuf.Timestamp timestamp = 6;
  Accounts accounts = 7;
}

message Account {
  bytes address = 1;
  bytes owner = 2;
  bytes data = 3;
  uint64 source_slot = 4;
  uint64 rent_epoch = 5;
  uint64 write_version = 6;
}

message Accounts {
  repeated Account accounts = 1;
}
